Nova linkagem e adiação da tela inicial

--- a/Site/css/style.css
+++ b/Site/css/style.css
@@ -85,7 +85,12 @@ button {
 }
 
 button:active{
-    opacity: 0.9;
+    opacity: 0.5;
+    transition: all .5s;
+}
+button:hover{
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
     transition: all .5s;
 }
 
